# simple_web_resume

./: .gitignore  CODE_OF_CONDUCT.md  GEMINI.md  README.md  index.html  main.py  pyproject.toml  resume.json  script.js  style.css
public/: edit.html  index.html  view.html
public/static/: resume.json
public/static/css/: style.css
public/static/js/: components.js  resume_viewer.js
static/js/: db.js
templates/: base.html  dashboard.html  edit_profile.html  index.html
templates/partials/: contact_modal.html  edit_form.html  education_item.html  experience_item.html  resume_layout.html  skill_category_item.html  storage_info_modal.html
tests/: conftest.py  test_autosave.py  test_creator_corner.py  test_dashboard.py  test_download.py  test_duplicate.py  test_edit_education.py  test_edit_highlights.py  test_edit_profile.py  test_edit_skills.py  test_edit_social_links.py  test_reorder_experience.py  test_storage_info.py  test_storage_info_first_visit.py  test_view_resume.py
