[project]
name = "simple-web-resume"
version = "0.1.0"
description = "A clean, responsive, and data-driven resume template that populates content from a JSON file."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
